# ChangeLog for media-gfx/fontforge
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.114 2009/10/15 13:51:56 maekke Exp $

  15 Oct 2009; Markus Meier <maekke@gentoo.org> fontforge-20090622.ebuild:
  amd64/x86 stable, bug #288261

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> fontforge-20090622.ebuild:
  Stable for HPPA (bug #288261).

  11 Oct 2009; nixnut <nixnut@gentoo.org> fontforge-20090622.ebuild:
  ppc stable #288261

  10 Oct 2009; Ryan Hill <dirtyepic@gentoo.org> fontforge-20090923.ebuild,
  +files/fontforge-20090923-configure.patch:
  Build fix for bug #288444 by Mikael Magnusson.

*fontforge-20090923 (09 Oct 2009)

  09 Oct 2009; Peter Volkov <pva@gentoo.org> -fontforge-20090224.ebuild,
  -fontforge-20090408-r1.ebuild, +fontforge-20090923.ebuild:
  Version bump. Remove unused.

  23 Jun 2009; Mike Auty <ikelos@gentoo.org> metadata.xml:
  Fix typo in metadata.xml description of truetype-debugger. See bug 275228.

*fontforge-20090622 (23 Jun 2009)

  23 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20090622.ebuild:
  Version bump.

*fontforge-20090408-r1 (21 Apr 2009)

  21 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  +fontforge-20090408-r1.ebuild:
  Provide pango and cairo use-flags and deps, bug 266868.

*fontforge-20090408 (09 Apr 2009)

  09 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20090408.ebuild:
  Version bump.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> fontforge-20081224-r1.ebuild:
  stable ppc, bug 260288

  15 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  fontforge-20081224-r1.ebuild:
  arm/ia64/s390/sh stable wrt #260288

  08 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  fontforge-20081224-r1.ebuild:
  Stable on alpha, bug #260288

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  fontforge-20081224-r1.ebuild:
  amd64/x86 stable, bug #260288
