@@ -8,7 +8,7 @@ DIST fontforge_htdocs-20081224.tar.bz2 2548702 RMD160 91e78a3ce4a8ab2e75db44fca4
 DIST fontforge_htdocs-20090622.tar.bz2 2764464 RMD160 6b8a319a5b2825ffaa5436bed2434403f953b372 SHA1 657bd8ff73245fb04c765a3ecf2276ea050021ff SHA256 44c7b8fdbf2472a15ceeda4d827557c04c7559f3bcd3ab2800eebcd293324763
 DIST fontforge_htdocs-20090914.tar.bz2 2828545 RMD160 74322d2d38f8321465b6fb9d7951f6be9503b46f SHA1 fc4b7dde7ba318691934b53cd72aa683bcd5e48f SHA256 3f9e6ed8dfb9d1a67c1311289bbe6538b8f20439cbe8bb6e56de6c688ad5ab57
 EBUILD fontforge-20081224-r1.ebuild 3288 RMD160 16060488de7bcb4e13f172b2d11fef48e40a2ae1 SHA1 5a32b81c74993f2681a4f3f7d02a68d861adbec3 SHA256 5b412126bf0fda8c84a0cccc5824cd2c9819c71ea44805857652ec46e880f298
-EBUILD fontforge-20090622.ebuild 3419 RMD160 f0119f207dbac961adf3987357ac035c6fca2bae SHA1 46ff2c3253ea9e908642277686b057c5629c1caf SHA256 66a5a981f5e2bb56dee237a45848e74932a23a19d3ad6b8cde2b1ffa03c6696e
-EBUILD fontforge-20090923.ebuild 3504 RMD160 145d34de45b6c800df3a1377139dbe33c357bb03 SHA1 4b152c384f9bdb52578887f79013289d3fa0a807 SHA256 b950ad92920a1011cf240539f1a0e7c24de0669afdb9ad8818ac488f10657666
-MISC ChangeLog 17064 RMD160 7e012cb00c526a9fa3653dc258810dcca6edf513 SHA1 835e916cd527a28edd0a74461e754b2c8baaa33b SHA256 ca983825fc17ae39e3743c839713e0ffaf625a4b2ff4fe863c450f2e2b7be652
+EBUILD fontforge-20090622.ebuild 3421 RMD160 a3e300fe18f9547e866deb76e802ff682c294e74 SHA1 a694bde4f4c6aafbf7669053bb8c61ffe810850a SHA256 8fa3941d51e1d49cf9f340730a983509a1769c11bf9abdb38d3555ca97a6c220
+EBUILD fontforge-20090923.ebuild 3498 RMD160 51432f242aab5b5c01bb8b53c157acfc2f28e8c4 SHA1 11f5934049b8231b15e5e21a964c7b403dfd38fd SHA256 659617fd11d108640a7d3ec7ec4e61c1d237821210b906ab09c0d406f0cc24a7
+MISC ChangeLog 17339 RMD160 ddc29321edf589187ca69f44940c5dc0c038d1c9 SHA1 aee2b2978cf2fdad81cf6220d6b010e21663ed70 SHA256 8c9048490615b8b20e51de28d82b65c7a124ee3cbcfbb778d69108fd21520559
 MISC metadata.xml 1457 RMD160 1d4951de15b18f544ad32bed8b23c86d9c062f99 SHA1 8cdb030e20d35deb3a7491fa2c622b67a4d9e0e7 SHA256 964fda064eb8db8a937daf398f089df1779527e1fe45aee0edede3142ea62604
